# Misudar

./: .copier-answers.yml  LICENSE  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  docs.yml  release.yml
devel/: __main__.py
docs/: gen_reference.py  mkdocs.yml
docs/src/: index.md
hatch_mise_build/: hook.py  install.py  setup-mise.sh
src/misudar/cli/: main.py
tests/: test_misudar.py
