[build-system]
requires = ["hatchling","sh>=2.2.2", "maison"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
include = ["src/misudar"]

[tool.hatch.build.targets.wheel]
packages = ["src/misudar"]

[project]
name = "misudar"
version = "0.0.1"
description = "Misudar is a pip installable shim for the Mise tool installation and other utilities"
readme = "README.md"
requires-python = ">=3.11,<4"
license = { file = "LICENSE.txt" }
keywords = []
authors = [{ name = "MikeLev", email = "mike.lev.w48@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    "hatch>=1.14.1",
    "sh>=2.2.2",
]

[project.urls]
Source = "https://github.com/MDLGH48/Misudar"

[dependency-groups]
dev = [
    { include-group = "util" },
    { include-group = "lint" },
    { include-group = "test" },
    "gitpython>=3.1.45",
]
util = ["click==8.1.7", "ipykernel==6.29.5", "copier==9.4.1"]

lint = [
    { include-group = "test" },
    "mdformat-admon @ git+https://github.com/rmorshea/mdformat-admon.git@0e513d7a2c265faf74441938ccbd1010660609f4",
    "mdformat-mkdocs==4.1.0",
    "mdformat-pyproject==0.0.1",
    "mdformat-tables==1.0.0",
    "mdformat==0.7.22",
    "pyright==1.1.389",
    "ruff==0.7.3",
    "yamlfix==1.17.0",
    "doccmd==2024.11.14",
]
test = [
    "coverage[toml]==7.6.1",
    "diff-cover==9.2.0",
    "pycobertura==3.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-examples==0.0.13",
    "pytest==8.3.3",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]
path = "BUILD/install.py"
mise = { version = "v2025.8.1"}
